# openenv-gridworld

./: .gitignore  Dockerfile  LICENSE  README.md  SPACE.md  about.html  agent.js  app.py  home.html  index.html  index.js  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server_app.py  style.css  test_validation.py
public/: index.html
server/: app.py
